fix: footer z-index

--- a/src/components/layouts/BasicLayout/Footer/index.module.css
+++ b/src/components/layouts/BasicLayout/Footer/index.module.css
@@ -1,4 +1,6 @@
 .footer {
+  @apply z-3 transform-gpu;
+
   a:hover {
     color: var(--yellow);
   }
